infrastructure/kubernetes/overlays/preprod/apps/http-route-fastapi.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fastapi
spec:
  parentRefs:
    - name: preprod
      namespace: networking
  hostnames:
    - api.preprod.djepenodev.ink
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: fastapi
          port: 8000
